--- a/src/global.scss
+++ b/src/global.scss
@@ -97,3 +97,6 @@
     --min-width: 150px;        // Optional: Minimum width to prevent too narrow appearance
     --text-align: center;      // Center the text
   }
+  ion-datetime {
+  --datetime-time-display: none;
+}
