new changes in ui

--- a/src/app/archive/archive.page.html
+++ b/src/app/archive/archive.page.html
@@ -35,6 +35,17 @@
 </ion-header>
 
 <ion-content id="main-content" class="ion-padding">
+
+  <div class="no_cards" *ngIf="notes.length === 0 ">
+    <!-- Show image -->
+    <img src="assets/icon/notes (1).png" alt="No Notes Image" style="max-width: 30%; height: auto;">
+    
+    <!-- Text message -->
+    <p style="text-align: center; margin-top: 10px; font-size: 18px;">
+      Notes you archived appear here.
+    </p>
+  </div>
+
   <div class="cards-container">
     <ion-card *ngFor="let note of notes"
       class="note-card"
