--- a/src/global.scss
+++ b/src/global.scss
@@ -74,8 +74,10 @@
 }
 
 .ql-toolbar.ql-snow{
-    background-color: whitesmoke;
+    background-color: #cedcff;
     border : 1px solid #cecece;
+    border-radius:14px;
+    margin:2px;
 }
 
 .ql-toolbar.ql-snow .ql-formats {
