--- a/src/app/archive/archive.page.scss
+++ b/src/app/archive/archive.page.scss
@@ -130,3 +130,15 @@ ion-toolbar {
   font-weight: bold;
   // font-size: 0.9em; /* Adjust size as needed */
 }
+
+
+
+.no_cards {
+  display: flex;
+  height: 100%;
+  --font-size: 1.5em;
+  color: #000000;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
