--- a/src/app/notes/notes.page.html
+++ b/src/app/notes/notes.page.html
@@ -53,7 +53,18 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <div class="cards-container">
+
+  <div class="no_cards" *ngIf="notes.length === 0 && !inSearchMode">
+    <!-- Show image -->
+    <img src="assets/icon/notes (1).png" alt="No Notes Image" style="max-width: 30%; height: auto;">
+    
+    <!-- Text message -->
+    <p style="text-align: center; margin-top: 10px; font-size: 18px;">
+      Notes you add appear here.
+    </p>
+  </div>
+
+  <div class="cards-container" *ngIf="notes.length > 0 || inSearchMode">
     <ion-card *ngFor="let note of inSearchMode ? filteredNotes : notes"
       class="note-card"
       [ngStyle]="{
