--- a/src/app/notes/notes.page.scss
+++ b/src/app/notes/notes.page.scss
@@ -190,3 +190,14 @@ ion-toolbar.toolbar-search {
   --placeholder-font-style: normal; /* Remove italic from placeholder text */
   --box-shadow: none;
 }
+
+
+.no_cards[_ngcontent-ng-c1401273564] {
+  display: flex;
+  height: 100%;
+  --font-size: 1.5em;
+  color: #000000;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
