--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,70 +3,70 @@
 
 
 
-:root {
-    --ion-color-blue: #1e3a8a; /* Dark blue color */
-    --ion-color-blue-rgb: 30, 58, 138;
-    --ion-color-blue-contrast: #ffffff;
-    --ion-color-blue-contrast-rgb: 255, 255, 255;
-    --ion-color-blue-shade: #1c3580;
-    --ion-color-blue-tint: #2c4fa7;
-  }
+// :root {
+//     --ion-color-blue: #1e3a8a; /* Dark blue color */
+//     --ion-color-blue-rgb: 30, 58, 138;
+//     --ion-color-blue-contrast: #ffffff;
+//     --ion-color-blue-contrast-rgb: 255, 255, 255;
+//     --ion-color-blue-shade: #1c3580;
+//     --ion-color-blue-tint: #2c4fa7;
+//   }
   
-  :root.ios,
-  :root.md {
-    --ion-background-color: #ffffff;
-    --ion-background-color-rgb: 255, 255, 255;
+//   :root.ios,
+//   :root.md {
+//     --ion-background-color: #ffffff;
+//     --ion-background-color-rgb: 255, 255, 255;
   
-    --ion-text-color: #1e40af; /* Text color */
-    --ion-text-color-rgb: 30, 64, 175;
+//     --ion-text-color: #1e40af; /* Text color */
+//     --ion-text-color-rgb: 30, 64, 175;
   
-    --ion-text-color-step-50: #2343b1;
-    --ion-text-color-step-100: #2646b4;
-    --ion-text-color-step-150: #294ab8;
-    --ion-text-color-step-200: #2c4fbc;
-    --ion-text-color-step-250: #2f53c0;
-    --ion-text-color-step-300: #3357c3;
-    --ion-text-color-step-350: #365bc7;
-    --ion-text-color-step-400: #3a5fcc;
-    --ion-text-color-step-450: #3d64d0;
-    --ion-text-color-step-500: #4068d4;
-    --ion-text-color-step-550: #446cd8;
-    --ion-text-color-step-600: #4770db;
-    --ion-text-color-step-650: #4b74df;
-    --ion-text-color-step-700: #4e78e3;
-    --ion-text-color-step-750: #527ce6;
-    --ion-text-color-step-800: #5580ea;
-    --ion-text-color-step-850: #5984ee;
-    --ion-text-color-step-900: #5c89f1;
-    --ion-text-color-step-950: #608df5;
+//     --ion-text-color-step-50: #2343b1;
+//     --ion-text-color-step-100: #2646b4;
+//     --ion-text-color-step-150: #294ab8;
+//     --ion-text-color-step-200: #2c4fbc;
+//     --ion-text-color-step-250: #2f53c0;
+//     --ion-text-color-step-300: #3357c3;
+//     --ion-text-color-step-350: #365bc7;
+//     --ion-text-color-step-400: #3a5fcc;
+//     --ion-text-color-step-450: #3d64d0;
+//     --ion-text-color-step-500: #4068d4;
+//     --ion-text-color-step-550: #446cd8;
+//     --ion-text-color-step-600: #4770db;
+//     --ion-text-color-step-650: #4b74df;
+//     --ion-text-color-step-700: #4e78e3;
+//     --ion-text-color-step-750: #527ce6;
+//     --ion-text-color-step-800: #5580ea;
+//     --ion-text-color-step-850: #5984ee;
+//     --ion-text-color-step-900: #5c89f1;
+//     --ion-text-color-step-950: #608df5;
   
-    --ion-background-color-step-50: #608df5;
-    --ion-background-color-step-100: #5c89f1;
-    --ion-background-color-step-150: #5984ee;
-    --ion-background-color-step-200: #5580ea;
-    --ion-background-color-step-250: #527ce6;
-    --ion-background-color-step-300: #4e78e3;
-    --ion-background-color-step-350: #4b74df;
-    --ion-background-color-step-400: #4770db;
-    --ion-background-color-step-450: #446cd8;
-    --ion-background-color-step-500: #4068d4;
-    --ion-background-color-step-550: #3d64d0;
-    --ion-background-color-step-600: #3a5fcc;
-    --ion-background-color-step-650: #365bc7;
-    --ion-background-color-step-700: #3357c3;
-    --ion-background-color-step-750: #2f53c0;
-    --ion-background-color-step-800: #2c4fbc;
-    --ion-background-color-step-850: #294ab8;
-    --ion-background-color-step-900: #2646b4;
-    --ion-background-color-step-950: #2343b1;
-  }
+//     --ion-background-color-step-50: #608df5;
+//     --ion-background-color-step-100: #5c89f1;
+//     --ion-background-color-step-150: #5984ee;
+//     --ion-background-color-step-200: #5580ea;
+//     --ion-background-color-step-250: #527ce6;
+//     --ion-background-color-step-300: #4e78e3;
+//     --ion-background-color-step-350: #4b74df;
+//     --ion-background-color-step-400: #4770db;
+//     --ion-background-color-step-450: #446cd8;
+//     --ion-background-color-step-500: #4068d4;
+//     --ion-background-color-step-550: #3d64d0;
+//     --ion-background-color-step-600: #3a5fcc;
+//     --ion-background-color-step-650: #365bc7;
+//     --ion-background-color-step-700: #3357c3;
+//     --ion-background-color-step-750: #2f53c0;
+//     --ion-background-color-step-800: #2c4fbc;
+//     --ion-background-color-step-850: #294ab8;
+//     --ion-background-color-step-900: #2646b4;
+//     --ion-background-color-step-950: #2343b1;
+//   }
   
-  .ion-color-blue {
-    --ion-color-base: var(--ion-color-blue);
-    --ion-color-base-rgb: var(--ion-color-blue-rgb);
-    --ion-color-contrast: var(--ion-color-blue-contrast);
-    --ion-color-contrast-rgb: var(--ion-color-blue-contrast-rgb);
-    --ion-color-shade: var(--ion-color-blue-shade);
-    --ion-color-tint: var(--ion-color-blue-tint);
-  }
+//   .ion-color-blue {
+//     --ion-color-base: var(--ion-color-blue);
+//     --ion-color-base-rgb: var(--ion-color-blue-rgb);
+//     --ion-color-contrast: var(--ion-color-blue-contrast);
+//     --ion-color-contrast-rgb: var(--ion-color-blue-contrast-rgb);
+//     --ion-color-shade: var(--ion-color-blue-shade);
+//     --ion-color-tint: var(--ion-color-blue-tint);
+//   }
   
