settings service created

--- a/src/app/notes/notes.page.scss
+++ b/src/app/notes/notes.page.scss
@@ -192,7 +192,7 @@ ion-toolbar.toolbar-search {
 }
 
 
-.no_cards[_ngcontent-ng-c1401273564] {
+.no_cards{
   display: flex;
   height: 100%;
   --font-size: 1.5em;
